<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/title_rounded"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/nineSessionsButton"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/session9_button_text"
            android:textSize="16sp"
            android:translationY="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/exercisesButton"
            android:layout_width="150dp"
            android:layout_height="101dp"
            android:text="@string/exercises_button_text"
            android:textSize="13sp"
            android:translationY="350dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/latestArticlesButton"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/latestArticles_button_text"
            android:textSize="15sp"
            android:translationY="350dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/setGongNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gongNotification_button_text"
            app:layout_editor_absoluteX="50dp"
            android:translationY="500dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/zhenShenRenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/footer_rounded"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/zhenShenRen_text"
            android:textAlignment="center"
            android:textColor="@color/gold"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_content_desc"
        android:elevation="-20dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/path_besides_a_grove_blur" />

    <ImageButton
        android:id="@+id/githubButton"
        android:background="@color/transparent"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/github_mark_64px"
        android:contentDescription="@string/github_button_content_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>