<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="60dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/settingsTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/settings_title_text"
        android:textSize="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/switchesLayout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitleText">

        <Switch
            android:id="@+id/alarmSwitch0600"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="50dp"
            android:text="06:00"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider0600"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/alarmSwitch0600"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Switch
            android:id="@+id/alarmSwitch1200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="50dp"
            android:text="12:00"
            app:layout_constraintTop_toBottomOf="@+id/divider0600"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider1200"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/alarmSwitch1200"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Switch
            android:id="@+id/alarmSwitch1800"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="50dp"
            android:text="18:00"
            app:layout_constraintTop_toBottomOf="@+id/divider1200"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider1800"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/alarmSwitch1800"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Switch
            android:id="@+id/alarmSwitch0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="50dp"
            android:text="00:00"
            app:layout_constraintTop_toBottomOf="@+id/divider1800"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settingsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_description_text"
        android:textAlignment="center"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchesLayout" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>